--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <meta name="description" content="description of your site">
-    <meta name="author" content="author of the site">
+    <meta name="description" content="Carrot &lt;3 Open-Source">
+    <meta name="author" content="Carrot Creative">
     <title>Carrot &lt;3 Open-Source</title>
   </head>
   <body>
